[project]
name = "rag-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.21",
    "google-genai>=1.37.0",
    "gradio>=5.45.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.11",
    "pypdf>=6.0.0",
]
